<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Text.Bold"
        android:textSize="18sp"
        android:text="@string/title_dialog_concierge"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"/>
    <Button
        android:id="@+id/btnSkype"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="textStart"
        android:layout_marginStart="25dp"
        android:text="@string/skype"
        android:textAppearance="@style/TextAppearance.Text.Regular"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnTeleg"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:textAlignment="textStart"
        android:layout_marginStart="25dp"
        android:text="@string/teleg"
        android:textAppearance="@style/TextAppearance.Text.Regular"
        android:textSize="18sp" />
    <Button
        android:id="@+id/btnCancel"
        style="@style/Button.Action.Positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.Text.Bold"
        android:textSize="18sp"
        android:layout_marginBottom="25dp"/>
</LinearLayout>