<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        android:id="@+id/bgIcon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"/>
    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/simbol_logo" />
    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:textAlignment="center"
        android:text="@string/hope_to_see_you_again"
        android:textAppearance="@style/TextAppearance.Text.Light"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnMakeNewBook"
            style="@style/Button.Action.Positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/make_new_booking"
            android:textAppearance="@style/TextAppearance.Text.Bold"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnCheckOut"
            style="@style/Button.Action.Negative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:textAppearance="@style/TextAppearance.Text.Bold" />
    </LinearLayout>
</RelativeLayout>